links and change default port

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,5 +9,13 @@
     <input type="file" name="files" multiple>
     <input type="submit" value="Upload">
 </form>
+
+<footer>
+    <center>
+        <a href="//files.ladyka.by/">FILES.LADYKA.BY</a>
+        <br>
+        <a href="//ladyka.by/">LADYKA.BY</a>
+    </center>
+</footer>
 </body>
 </html>
